[package]
name = "rustler"
version = "0.1.0"
edition = "2021"

[dependencies]
# For serialization examples
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For HTTP requests (commented out to keep dependencies minimal)
# reqwest = { version = "0.11", features = ["json"] }

# For time handling
chrono = "0.4"
